--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.4"
@@ -18,6 +19,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "react-icons": "^4.10.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.9.5",
     "vite": "^2.9.16"
